# LLP

./: .gitignore  pyproject.toml
 notebooks/first/: dc_qaoa.ipynb  epsilon.ipynb  make-unitary.ipynb  p-7  playaround.ipynb  sparse.ipynb  sparse.py  stringfromind.ipynb  svllp.ipynb
 notebooks/first/flows/: 01.ipynb  02.ipynb
resource/sample_matrices/: AS-Copy1.npy  QS-Copy1.npy
src/ibmq_utils/: __init__.py
src/new_basis_llp_qaoa/qaoa/: __init__.py  parameters.py
src/new_basis_llp_qaoa/statevector_sim/: __init__.py  cyp_statevector_sim.py  statevector_llp.py  statevector_llp_v2.py
src/tew_code/: main.py  qtft_tools.py  tmp-qaoa.py  tmp.py
src/tew_code/.ipynb_checkpoints/: test-checkpoint.ipynb
src/tew_code/pics_results/: log
