[tool.poetry]
name = "newbasisimbq"
version = "0.1.0"
description = ""
authors = ["r4b61t <chayaponthunsetkul@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ipykernel = "^6.27.0"
numpy = "^1.26.2"
jupyter = "^1.0.0"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
tqdm = "^4.66.1"
networkx = "^3.2.1"
python-louvain = "^0.16"
joblib = "^1.3.2"
scikit-sparse = "^0.4.12"
numba = "^0.58.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
